Revert "Fix line breaks in <code> tags"
This reverts commit ba860e5706041d9ea05635058475e22c2028f228.

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -78,10 +78,6 @@ header {
     }
 }
 
-code {
-    white-space: normal;
-}
-
 .about {
     text-align: center;
 }
